refactor racine en root. ajout d'une verification que le comment existe avant de tenter de le récuprer. (dans GET comments/{id})
