# swagger/spring-server/src/main/java/io/lozzikit/discussions/repositories/CommentRepository.java
@@ -11,5 +11,5 @@ import java.util.List;
 public interface CommentRepository extends CrudRepository<CommentEntity, Long>{
     List<CommentEntity> findByArticleID(long articleId);
 
-    List<CommentEntity> findByRacineAndArticleID(boolean Racine, long articleId);
+    List<CommentEntity> findByRootAndArticleID(boolean root, long articleId);
 }
